# pool

./: .gitignore  README.md  mermaid_simple.md  pixi.toml  start_uros.sh
docs/: README_PIXI.md  dataflow.md
scripts/: build_firmware.sh  build_micro_ros_agent.sh  record_deployment.sh  rosbag.sh  run_esp_talker.sh  setup_dvl_eth.sh  setup_udev.sh  sim_ps.sh  start_agent.sh  stop_agent.sh  upload_esp32.sh  vesc_ps.sh
src/auv_interfaces/: CMakeLists.txt  package.xml
src/auv_interfaces/msg/: EspFeedback.msg
src/loki_bringup/: CMakeLists.txt  package.xml
src/loki_bringup/config/: ekf.yaml  mag_calib_params.yaml  pid_params.yaml  vesc_params.yaml
src/loki_bringup/launch/: real.launch.py  sim.launch.py
src/loki_bringup/meshes/: BottomRudder1_Link.STL  BottomRudder2_Joint.STL  DVL_Link.STL  Elevator1_Link.STL  Elevator2_Link.STL  Thruster1_Link.STL  Thruster2_Link.STL  TopRudder1_Link.STL  TopRudder2_Link.STL  base_link.STL
src/loki_bringup/scripts/: box_test.py  circle_test.py  current_test.py  mag_calibrate.py  manual.py  manual2.py  manual_control.py  pin_test.py  servo_test.py  teleop.py
src/loki_bringup/urdf/: Full_Assembly_URDF_Combined.urdf
src/loki_control/: CMakeLists.txt  package.xml
src/loki_control/include/loki_control/: controller.hpp  pid.hpp
src/loki_control/src/: controller.cpp  main.cpp  pid.cpp
src/loki_monitor/: package.xml  setup.cfg  setup.py
src/loki_monitor/loki_monitor/: monitor.py  step_logger.py
src/loki_msgs/: CMakeLists.txt  package.xml
src/loki_msgs/msg/: EspPacket.msg  EspRawSensor.msg  LokiCommand.msg
src/loki_peripherals/loki_actuators/: CMakeLists.txt  package.xml
src/loki_peripherals/loki_actuators/src/: hw_bridge.cpp
src/loki_peripherals/loki_cerulean/: CMakeLists.txt  package.xml
src/loki_peripherals/loki_cerulean/include/tracker650_ros_driver/: tracker650_parser.hpp  tracker650_receiver.hpp  tracker650_republisher.hpp
src/loki_peripherals/loki_cerulean/src/: tracker650_parser.cpp  tracker650_receiver.cpp  tracker650_republisher.cpp
src/loki_peripherals/loki_icm/: CMakeLists.txt  package.xml
src/loki_peripherals/loki_icm/include/ahrs_orientation/: ahrs_orientation.hpp
src/loki_peripherals/loki_icm/launch/: ahrs_orientation.launch.py
src/loki_peripherals/loki_icm/scripts/: mag_calib_node.py
src/loki_peripherals/loki_icm/src/: ahrs_orientation.cpp
src/loki_peripherals/loki_vesc/: package.xml  setup.cfg
src/loki_peripherals/loki_vesc/loki_vesc/: vesc_node.py
src/loki_vesc/: setup.py
src/loki_vesc/loki_vesc/: vesc_node.py
udev/: esp32-vesc.rules
