<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loki_bringup</name>
  <version>0.1.0</version>
  <description>launch files for loki auv (sim and real)</description>
  <maintainer email="bolin@bolin.com">Bolin</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
<exec_depend>loki_control</exec_depend>
<exec_depend>loki_vesc</exec_depend>
<exec_depend>loki_actuators</exec_depend>
<exec_depend>loki_icm</exec_depend>
<exec_depend>loki_cerulean</exec_depend>
<exec_depend>loki_monitor</exec_depend>
<exec_depend>ros_tcp_endpoint</exec_depend>
<exec_depend>foxglove_bridge</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>robot_localization</exec_depend>
<exec_depend>imu_filter_madgwick</exec_depend> 
<exec_depend>tf2_ros</exec_depend> 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
