<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loki_actuators</name>
  <version>0.1.0</version>
  <description>Hardware bridge — relays /cmd/* to ESP32 via micro-ROS.</description>
  <maintainer email="bolin@bolin.com">Bolin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>loki_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
