<?xml version="1.0"?>
<package format="3">
  <name>loki_vesc</name>
  <version>0.1.0</version>
  <description>Minimal VESC serial driver for Loki AUV</description>
  <maintainer email="loki@loki.local">loki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
